# opendlv.carolocup

./: .gitignore  CMakeLists.txt  ChangeLog  Parker.cpp  README.md
cmake.Modules/: FindUEYE.cmake
code/control/: CMakeLists.txt
code/control/cameraProxy/: CMakeLists.txt
code/control/communicationLink/: CMakeLists.txt
code/control/communicationLink/apps/: carolocup-control-communicationlink.cpp
code/control/communicationLink/include/: CommunicationLink.h
code/control/communicationLink/src/: CommunicationLink.cpp
code/control/defines/: defines.h
code/control/example/: CMakeLists.txt
code/control/example/apps/: carolocup-control-example.cpp
code/control/example/include/: Example.h
code/control/example/man/: carolocup-control-example.1
code/control/example/src/: Example.cpp
code/control/example/testsuites/: ExampleTestSuite.h
code/control/laneFollower/: CMakeLists.txt
code/control/laneFollower/apps/: carolocup-control-lanefollower.cpp
code/control/laneFollower/include/: ImgProcess.h  LaneFollower.h  PID.h
code/control/laneFollower/src/: ImgProcess.cpp  LaneFollower.cpp  PID.cpp
code/control/laneFollower/testsuites/: LaneFollowerTestSuite.h
code/control/lidarHandler/: CMakeLists.txt
code/control/lidarHandler/apps/: carolocup-control-lidarhandler.cpp
code/control/lidarHandler/include/: LIDARHandler.h
code/control/lidarHandler/src/: LIDARHandler.cpp
code/control/lidarHandler/testsuites/: LIDARHandlerTestSuite.h
code/control/overtaker/: CMakeLists.txt
code/control/overtaker/apps/: carolocup-control-overtaker.cpp
code/control/overtaker/include/: Overtaker.h
code/control/overtaker/src/: Overtaker.cpp
code/control/overtaker/testsuites/: OvertakerTestSuite.h
code/control/parker/: CMakeLists.txt
code/control/parker/apps/: carolocup-control-parker.cpp
code/control/parker/include/: Parker.h
code/control/parker/src/: Parker.cpp
code/control/parker/testsuites/: ParkerTestSuite.h
code/control/proxy/: CMakeLists.txt
code/control/proxy/apps/: carolocup-control-proxy.cpp
code/control/proxy/cameraProxy/: CMakeLists.txt
code/control/proxy/cameraProxy/apps/: carolocup-control-proxy-cameraproxy.cpp
code/control/proxy/cameraProxy/include/: Camera.h  CameraProxy.h  OpenCVCamera.h  uEyeCamera.h
code/control/proxy/cameraProxy/src/: CameraProxy.cpp  OpenCVCamera.cpp  uEyeCamera.cpp
code/control/proxy/cameraProxy/testsuites/: CameraProxyTestSuite.h
code/control/proxy/communicationLink/: CMakeLists.txt
code/control/proxy/communicationLink/include/: CommunicationLink.h
code/control/proxy/communicationLink/src/: CommunicationLink.cpp
code/control/proxy/communicationLink/testsuites/: CommunicationLinkTestSuite.h
code/control/proxy/include/: Camera.h  OpenCVCamera.h  Proxy.h
code/control/proxy/lidarHandler/: CMakeLists.txt
code/control/proxy/lidarHandler/apps/: carolocup-control-proxy-lidarhandler.cpp
code/control/proxy/lidarHandler/include/: LIDARHandler.h
code/control/proxy/lidarHandler/src/: LIDARHandler.cpp
code/control/proxy/serialHandler/: CMakeLists.txt
code/control/proxy/serialHandler/apps/: carolocup-control-proxy-serialhandler.cpp
code/control/proxy/src/: Camera.cpp  OpenCVCamera.cpp  Proxy.cpp
code/control/proxy/testsuites/: ProxyTestSuite.h
code/control/proxy/udpconnectionreceiver/: CMakeLists.txt
code/control/proxy/udpconnectionstreamer/: CMakeLists.txt
code/control/serial/: CMakeLists.txt
code/control/serial/include/: serial.h
code/control/serialHandler/: CMakeLists.txt
code/control/serialHandler/include/: SerialHandler.h  arduino.h  serial.h
code/control/serialHandler/src/: SerialHandler.cpp  arduino.c  serial.c
code/control/serialHandler/testsuites/: SerialHandlerTestSuite.h
code/control/serialInHandler/: CMakeLists.txt
code/control/serialInHandler/include/: SerialInHandler.h
code/control/serialInHandler/src/: SerialInHandler.cpp
code/control/serialOutHandler/: CMakeLists.txt
code/control/serialOutHandler/include/: SerialOutHandler.h
code/control/serialOutHandler/src/: SerialOutHandler.cpp
code/control/udpconnectionreceiver/: CMakeLists.txt
code/control/udpconnectionreceiver/include/: UDPConnectionReceiver.h
code/control/udpconnectionreceiver/src/: UDPConnectionReceiver.cpp
code/control/udpconnectionstreamer/: CMakeLists.txt
code/control/udpconnectionstreamer/src/: UDPConnectionStreamer.cpp
(+243 files in other folders)
